# datahelix

./: .env.example  .gitignore  .gitmodules  404.html  CLAUDE.md  FABLE_HANDOFF.md  Makefile  README.md  TESTING.md  canon-design-notes.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  renovate.json
aperture/: README.md  index.html  pyproject.toml
aperture/design/: INDEX.md  portal-open-questions.md  portal-vision-handoff.md  sec1_overview.md  sec2_architecture.md  sec3_cli.md  sec4_web_ui.md  sec5_api_clients.md  sec6_nfr.md
aperture/design/INDEX/: index.html
aperture/design/actors/: index.html
aperture/design/architecture/: index.html
aperture/design/claude-design-brief/: index.html
aperture/design/decisions/: index.html
aperture/design/design-export/: Aperture.dc.html  index.html
aperture/design/design-tokens/: index.html
aperture/design/gen3-comparison/: index.html
aperture/design/implementation-plan/: index.html
aperture/design/instruction-path-model/: index.html
aperture/design/library-survey/: index.html
aperture/design/portal-open-questions/: index.html
aperture/design/portal-requirements/: index.html
aperture/design/portal-vision-handoff/: index.html
aperture/design/prefab/: index.html
aperture/design/prior-art/: index.html
aperture/design/sec1_overview/: index.html
aperture/design/sec2_architecture/: index.html
aperture/design/sec3_cli/: index.html
aperture/design/sec4_web_ui/: index.html
aperture/design/sec5_api_clients/: index.html
aperture/design/sec6_nfr/: index.html
aperture/design/vision/: index.html
aperture/docs/: cli-reference.md  introduction.md
aperture/docs/cli-reference/: index.html
aperture/docs/introduction/: index.html
aperture/docs/quickstart/: index.html
aperture/src/aperture/: __init__.py
aperture/tests/: test_cli.py  test_formatters.py
aperture/user-docs/: introduction.md  quickstart.md
aperture/user-docs/cli-reference/: index.html
aperture/user-docs/introduction/: index.html
aperture/user-docs/quickstart/: index.html
canon/: .gitignore  Dockerfile  README.md  index.html  pyproject.toml
canon/design/: INDEX.md  appendix_a_rnaseq_example.md  reference_canon_rules_yaml.md  reference_canon_yaml.md  sec1_overview.md  sec2_architecture.md  sec3_rules_dsl.md  sec3b_cwl_integration.md  sec4_resolution_algorithm.md  sec5_executor_adapters.md  sec5b_storage_adapters.md  sec6_hippo_integration.md  sec6_mosaic_integration.md  sec7_nfr.md  sec8_dynamic_rules.md
canon/design/INDEX/: index.html
canon/design/appendix_a_rnaseq_example/: index.html
canon/design/reference_canon_rules_yaml/: index.html
canon/design/reference_canon_yaml/: index.html
canon/design/sec1_overview/: index.html
canon/design/sec2_architecture/: index.html
canon/design/sec3_rules_dsl/: index.html
canon/design/sec3b_cwl_integration/: index.html
canon/design/sec4_resolution_algorithm/: index.html
canon/design/sec5_executor_adapters/: index.html
canon/design/sec5b_storage_adapters/: index.html
canon/design/sec6_hippo_integration/: index.html
canon/design/sec6_mosaic_integration/: index.html
canon/design/sec7_nfr/: index.html
canon/design/sec8_dynamic_rules/: index.html
canon/docs/: introduction.md  quickstart.md  user-guide.md
canon/docs/introduction/: index.html
canon/docs/quickstart/: index.html
canon/docs/user-guide/: index.html
canon/plan/: feature.yaml  opencode.json  roadmap.yaml
canon/plan/openplan/: HISTORY.md  implementation_report.md
canon/src/canon/: __init__.py  config.py  exceptions.py  hippo_client.py  ingestion.py  plan.py  planner.py  resolver.py  rule_loader.py  rule_registry.py  rules.py  types.py
canon/tests/: conftest.py  test_cli.py  test_config.py  test_cwltool.py  test_dynamic_rules.py  test_entity_ref.py  test_exceptions.py  test_executor_local.py  test_ingestion.py  test_plan.py  test_planner.py  test_resolver.py  test_rules.py  test_s3_storage.py  test_storage.py  test_types.py
canon/tests/integration/: test_integration.py
canon/user-docs/introduction/: index.html
canon/user-docs/quickstart/: index.html
canon/user-docs/user-guide/: index.html
cappella/: Dockerfile  index.html  pyproject.toml
cappella/design/: INDEX.md  sec1_overview.md  sec2_architecture.md  sec3_adapters.md  sec4_audit.md  sec5_workflows.md  sec6_nfr.md  sec7_testing.md
cappella/design/INDEX/: index.html
cappella/design/sec1_overview/: index.html
cappella/design/sec2_architecture/: index.html
cappella/design/sec3_adapters/: index.html
cappella/design/sec4_audit/: index.html
cappella/design/sec5_workflows/: index.html
cappella/design/sec6_nfr/: index.html
cappella/design/sec7_testing/: index.html
cappella/docs/: installation.md  introduction.md  overview.md  quickstart.md  user_guide.md  workflows.md
cappella/docs/installation/: index.html
cappella/docs/introduction/: index.html
cappella/docs/overview/: index.html
cappella/docs/quickstart/: index.html
cappella/docs/user_guide/: index.html
cappella/openplan/: implementation_report.md
cappella/tests/: conftest.py  test_adapters_csv.py  test_adapters_json.py  test_adapters_sql.py  test_api.py  test_canon.py  test_cli.py  test_config.py  test_exceptions.py  test_ingest_conflict.py  test_ingest_pipeline.py  test_reconciliation.py  test_resolver_selection.py  test_triggers.py  test_types.py  test_webhook_api.py
cappella/user-docs/: installation.md
certification/: README.md  compatibility.json  composition.lock.json  pyproject.toml
certification/compose/: aperture-nginx.certify.conf  docker-compose.certify.yml  hippo.certify.yaml  mosaic.certify.yaml
certification/ledger/: __init__.py  _git.py  assemble.py  certify.py  cli.py  gate.py  model.py  query.py
certification/scenarios/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
certification/scripts/: deploy_gate.sh  read_lock.py  run_composition.sh  seed_via_config.py
certification/tests/: test_ledger.py
metapackage/: README.md  pyproject.toml
metapackage/tests/: conftest.py  test_cli.py
(+730 files in other folders)
