[project]
name = "datahelix-platform-tests"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "platform: marks tests as platform integration tests (real Hippo + Canon in-process)",
    "contract: marks tests as contract/behavioral-spec tests (consumer-driven API assertions)",
]
