[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bass-aperture"
version = "0.1.0"
description = "BASS Aperture CLI - interface layer for the BASS platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "httpx>=0.24",
    "pyyaml",
    "pydantic>=2.0",
]

[project.optional-dependencies]
local = ["bass-hippo"]
all = ["bass-hippo"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
bass = "aperture.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aperture"]
