[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canon"
version = "0.1.0"
description = "Semantic dependency resolver and workflow orchestrator for BASS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "cwltool>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
canon = "canon.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (run real subprocesses)",
]
