[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canon"
version = "0.1.0"
description = "Semantic dependency resolver and workflow orchestrator for BASS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "cwltool>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
canon = "canon.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (run real subprocesses)",
]

[project.entry-points."hippo.reference_loaders"]
canon = "canon.hippo_reference.loader:CanonReferenceLoader"

[project.entry-points."canon.executor_adapters"]
cwltool = "canon.executors.cwltool:CwltoolAdapter"

[project.entry-points."canon.storage_adapters"]
local = "canon.storage.local:LocalStorageAdapter"
https = "canon.storage.http:HTTPStorageAdapter"
http = "canon.storage.http:HTTPStorageAdapter"

# Workflow package entry point (reserved for v0.2 — workflow package support)
# [project.entry-points."canon.workflow_packages"]
# example = "canon_workflows_example:ExampleWorkflowPackage"
