[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datahelix-canon"
version = "0.1.0"
description = "Semantic dependency resolver and workflow orchestrator for DataHelix"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "cwltool>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "fastapi>=0.110",
    "httpx>=0.27",
    "boto3>=1.34",
]
storage-s3 = [
    "boto3>=1.34",
]
api = [
    "fastapi>=0.110",
]

[project.scripts]
canon = "canon.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/canon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (run real subprocesses)",
]

[project.entry-points."hippo.reference_loaders"]
canon = "canon.mosaic_reference.loader:CanonReferenceLoader"

[project.entry-points."mosaic.reference_loaders"]
canon = "canon.mosaic_reference.loader:CanonReferenceLoader"

[project.entry-points."canon.executor_adapters"]
cwltool = "canon.executors.cwltool:CwltoolAdapter"

[project.entry-points."canon.storage_adapters"]
local = "canon.storage.local:LocalStorageAdapter"
https = "canon.storage.http:HTTPStorageAdapter"
http = "canon.storage.http:HTTPStorageAdapter"
s3 = "canon.storage.s3:S3StorageAdapter"

# Workflow package entry point (reserved for v0.2 — workflow package support)
# [project.entry-points."canon.workflow_packages"]
# example = "canon_workflows_example:ExampleWorkflowPackage"
